--- a/todolist/task/templates/task/list.html
+++ b/todolist/task/templates/task/list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Task List</title>
+  </head>
+  <body>
+    <h1>FUNCIONOU!</h1>
+  </body>
 </html>
