--- a/todolist/task/templates/task/list.html
+++ b/todolist/task/templates/task/list.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Task List</title>
-  </head>
-  <body>
-    <h1>FUNCIONOU!</h1>
-  </body>
-</html>
+{% extends 'base_template.html' %} {% block title %} Lista de Tarefas {%
+endblock %} {%block content %}
+<h1>Lista de Tarefas</h1>
+{% endblock %}
