--- a/todolist/task/templates/task/yourname.html
+++ b/todolist/task/templates/task/yourname.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>yourname</title>
-</head>
-<body>
-    <h1>O seu nome é: {{ name }}</h1>
-</body>
-</html>
+{% extends 'base_template.html' %} {% block title %} Qual o seu nome? {%
+endblock %} {% block content %}
+<h1>O seu nome é: {{name}}</h1>
+{% endblock %}
