--- a/todolist/task/templates/base_template.html
+++ b/todolist/task/templates/base_template.html
@@ -1,12 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
   <body>
     <p>Barra de Navegação</p>
     {% block content %} {% endblock %}
     <p>Rodapé de página</p>
+    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
