--- a/todolist/task/templates/task/list.html
+++ b/todolist/task/templates/task/list.html
@@ -1,4 +1,7 @@
-{% extends 'base_template.html' %} {% block title %} Lista de Tarefas {%
-endblock %} {%block content %}
-<h1>Lista de Tarefas</h1>
+{% extends 'base_template.html' %}
+
+{% block title %}Lista de Tarefas{% endblock %}
+
+{% block content %}
+<h1>Aqui é a lista de tarefas!</h1>
 {% endblock %}
