--- a/todolist/task/templates/task/yourname.html
+++ b/todolist/task/templates/task/yourname.html
@@ -1,4 +1,8 @@
-{% extends 'base_template.html' %} {% block title %} Qual o seu nome? {%
-endblock %} {% block content %}
-<h1>O seu nome é: {{name}}</h1>
+{% extends 'base_template.html' %}
+
+{% block title %}Qual é o seu nome?{% endblock %}
+
+{% block content %}
+<h1>O seu nome é {{ name }}</h1>
 {% endblock %}
+
