--- a/todolist/task/static/style.css
+++ b/todolist/task/static/style.css
@@ -5,7 +5,7 @@
 /* NAVBAR */
 
 .navbar {
-  background-color: aqua;
+  background-color: black;
   border-bottom: 1px solid #333;
   margin-bottom: 20px;
 }
@@ -22,6 +22,6 @@
   letter-spacing: 1px;
 }
 
-h1 {
+h2 {
   color: blueviolet;
 }
