--- a/todolist/task/templates/base_template.html
+++ b/todolist/task/templates/base_template.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Usar comando python manage.py collectstatic --clear para limpar o cache do Django e executar as mudanças de CSS -->
 <head>
   <meta charset="UTF-8" />
   {% load static %}
   <title>{% block title %} {% endblock %}</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <link rel="stylesheet" href="{% static 'styles.css' %}" />
+  <link rel="stylesheet" href="{% static 'style.css' %}" />
   <!-- BOOTSTRAP PARA CSS -->
 </head>
 
@@ -44,7 +44,7 @@
     </footer>
   </div>
 
-  <script src="{% static 'todolist\task\templates\static\js\scripts.js' %}"></script>
+  <script src="{% static 'scripts.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
